[metadata]
name = ubarec
description = Universal backup and recovery using S3 repo
long_description = file: README.md
long_description_content_type = text/markdown
author = Chmelyuk Vladislav
author_email = neimp@yandex.ru
url = http://github.com/fgbm/ubarec
classifiers =
    License :: OSI Approved :: MIT License
    Natural Language :: Russian
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Archiving :: Backup
    Topic :: Utilities

[options]
include_package_data = true
packages = find:
install_requires =
    typer
    pyodbc
    colorama
    boto3
    loguru
    pydantic

[options.entry_points]
console_scripts =
    ubarec = ubarec.main:app

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = ubarec/_version.py
versionfile_build = ubarec/_version.py
tag_prefix =
parentdir_prefix = ubarec-

